@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>353</width>
-            <height>343</height>
+            <height>347</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -48,44 +48,11 @@
             <property name="title">
                 <string>&amp;General Options</string>
             </property>
-            <grid>
+            <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>kcfg_HidePlaylistWindow</cstring>
-                    </property>
-                    <property name="text">
-                        <string>&amp;Hide playlist with main window</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+H</string>
-                    </property>
-                </widget>
-                <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>kcfg_ShowTrayIcon</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Show &amp;tray icon</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+T</string>
-                    </property>
-                </widget>
-                <widget class="QCheckBox" row="1" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>kcfg_ShowMetaInfo</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Show &amp;metadata in playlist</string>
-                    </property>
-                    <property name="accel">
-                        <string>Alt+M</string>
-                    </property>
-                </widget>
-                <widget class="QCheckBox" row="0" column="0" rowspan="1" colspan="2">
+                <widget class="QCheckBox">
                     <property name="name">
                         <cstring>kcfg_SavePlaylist</cstring>
                     </property>
@@ -96,89 +63,48 @@
                         <string>Alt+S</string>
                     </property>
                 </widget>
-            </grid>
-        </widget>
-        <widget class="QButtonGroup" row="1" column="0">
-            <property name="name">
-                <cstring>buttonGroup2</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>3</hsizetype>
-                    <vsizetype>3</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="title">
-                <string>&amp;User Interface</string>
-            </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="QCheckBox" row="1" column="0" rowspan="1" colspan="2">
+                <widget class="QCheckBox">
                     <property name="name">
-                        <cstring>kcfg_ConfirmExit</cstring>
+                        <cstring>kcfg_ShowMetaInfo</cstring>
                     </property>
                     <property name="text">
-                        <string>Confirm e&amp;xiting the program</string>
+                        <string>Show &amp;metadata in playlist</string>
                     </property>
                     <property name="accel">
-                        <string>Alt+X</string>
+                        <string>Alt+M</string>
                     </property>
                 </widget>
-                <widget class="QLabel" row="2" column="0">
+                <widget class="QCheckBox">
                     <property name="name">
-                        <cstring>textLabel1</cstring>
+                        <cstring>kcfg_ShowTrayIcon</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Add directories:</string>
-                    </property>
-                    <property name="buddy" stdset="0">
-                        <cstring>kcfg_DropMode</cstring>
-                    </property>
-                </widget>
-                <widget class="QComboBox" row="2" column="1">
-                    <item>
-                        <property name="text">
-                            <string>Ask each time</string>
-                        </property>
-                    </item>
-                    <item>
-                        <property name="text">
-                            <string>Recursively</string>
-                        </property>
-                    </item>
-                    <item>
-                        <property name="text">
-                            <string>Non-recursively</string>
-                        </property>
-                    </item>
-                    <property name="name">
-                        <cstring>kcfg_DropMode</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>7</hsizetype>
-                            <vsizetype>5</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                </widget>
-                <widget class="QCheckBox" row="0" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>ConfirmClear</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Confirm &amp;clearing the playlist</string>
+                        <string>Show &amp;tray icon</string>
                     </property>
                     <property name="accel">
-                        <string>Alt+C</string>
+                        <string>Alt+T</string>
                     </property>
                 </widget>
-            </grid>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_HidePlaylistWindow</cstring>
+                    </property>
+                    <property name="text">
+                        <string>&amp;Hide playlist with main window</string>
+                    </property>
+                    <property name="accel">
+                        <string>Alt+H</string>
+                    </property>
+                </widget>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_DirectoriesRecursively</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Add directories recursively</string>
+                    </property>
+                </widget>
+            </vbox>
         </widget>
     </grid>
 </widget>
