@@ -3,7 +3,9 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
-  * fix: sort playlist columns which contain numbers in the correct order
+  * add: selected aRts-effects will be remembered on next program start, including settings
+  * fix: sort numerical playlist columns in correct order
+  * add: logarithmic fading algorithm makes crossfading smoother
   * add: Select a series of tracks, start inline tag-editing a tag and amaroK will prompt you to
          edit that tag for all tracks one-by-one
   * add: improved crossfading: will fade out smoothly when the stop button is pressed 
